--- a/index.html
+++ b/index.html
@@ -67,7 +67,20 @@
     </div>
   </main>
 
+  <footer class='containerMasterFooter'>
+    <div class='containerMasterF'>
+      <ul>
+        <li class='itemFooter'>HOME</li>
+        <li class='itemFooter'>RANKING</li>
+        <li class='itemFooter'>PROMOÇÃO</li>
+        <li class='itemFooterr'>CONTATO</li>
+      </ul>
 
+      <div>
+        <img src="./assets/imgs/Logo.svg" alt="Logo Pizza">
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
