--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
       <nav>
         <ul class="listLink">
-          <li>
+          <li class="spacing">
             <a class='itemLink' href="#">HOME</a>
           </li>
-          <li>
+          <li class="spacing">
             <a class='itemLink' href="#">RANKING</a>
           </li>
-          <li>
+          <li class="spacing">
             <a class='itemLink' href="#">PROMOÇÃO</a>
           </li>
           <li>
